traefik/jellyfin-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin-external
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`jellyfin.local`) || Host(`jellyfin.pindaroli.org`)
    kind: Rule
    services:
    - name: servarr-jellyfin
      port: 8096
  tls:
    {}
