traefik/lidarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: lidarr-ingress-route
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lidarr.pindaroli.org`) 
      kind: Rule
      services:
        - name: servarr-lidarr
          port: 8686
  tls:
    secretName: pindaroli-wildcard-tls
