traefik/prowlarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr-ingress-route
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.pindaroli.org`) 
      kind: Rule
      services:
        - name: servarr-prowlarr
          port: 9696
  tls:
    secretName: pindaroli-wildcard-tls
