traefik/qbittorrent-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: qbittorrent-ingress-route
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`qbittorrent.pindaroli.org`) #match: "(Host(`portal.local`)  &&  Path(`/qbit`)"
    kind: Rule
    middlewares:
      #- name: replace-path
      #- name: dashboard-auth
    services:
    - name: servarr-qbittorrent-web
      port: 8080
  tls:
    secretName: pindaroli-wildcard-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: replace-path
  namespace: arr
spec:
  replacePath:
    path: /
