traefik/readarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-ingress-route
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`readarr.pindaroli.org`) 
      kind: Rule
      services:
        - name: servarr-readarr
          port: 8787
  tls:
    secretName: pindaroli-wildcard-tls
