traefik/readarr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: readarr-external
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`portal`) && PathPrefix(`/readarr`) || Host(`readarr.pindaroli.org`) 
    kind: Rule
    services:
    - name: servarr-readarr
      port: 8787
  tls:
    {}
