traefik/sonarr-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-ingress-route
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.pindaroli.org`) 
      kind: Rule
      services:
        - name: servarr-sonarr
          port: 8989
  tls:
    secretName: pindaroli-wildcard-tls
